# dash_trial

./: .gitignore  CLAUDE.md  Dockerfile  README.md  api_server.py  compose.yaml  example.env  pyproject.toml  railway.json  requirements.txt
.github/workflows/: validate.yml
app/: __init__.py  main.py
dash/: __init__.py  __main__.py  agents.py  dash_agent.py  paths.py  r_interpreter.py
dash/context/: __init__.py  business_rules.py  semantic_model.py
dash/evals/: __init__.py  grader.py  run_evals.py  test_cases.py
dash/scripts/: load_data.py  load_knowledge.py
dash/tools/: __init__.py  code_interpreter.py  introspect.py  save_query.py
db/: __init__.py  session.py  url.py
scripts/: build_image.sh  entrypoint.sh  railway_up.sh  retitle_conversations.py  validate.sh  venv_setup.sh
